--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
     "cookie": "^1.1.1",
+    "framer-motion": "^12.34.0",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
